[tool.poetry]
name = "jupyter2hashnode"
version = "0.1.14a4"
description = "Export from jupyter notebook into hashnode blog articles"
authors = ["Tiago Patricio Santos <tiagopatriciosantos@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tiagopatriciosantos/jupyter2hashnode"

[tool.poetry.dependencies]
python = "^3.8"
nbconvert = {extras = ["all"], version = "^6.4.0"}
python-dotenv = "^0.15.0"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.20.0"
Pillow = "^9.1.0"
Sphinx = { version = "5.3.0", optional = true }
sphinx-rtd-theme = { version = "^1.1.1", optional = true }
nbsphinx = { version = "^0.8.12", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme","nbsphinx"]



[tool.poetry.scripts]
rick-portal-gun = "jupyter2hashnode.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"