[tool.poetry]
name = "jupyter2hashnode"
version = "0.1.22"
description = "Export from jupyter notebook into hashnode blog articles"
authors = ["Tiago Patricio Santos <tiagopatriciosantos@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tiagopatriciosantos/jupyter2hashnode"
documentation = "https://jupyter2hashnode.readthedocs.io/en/latest/index.html"

[tool.poetry.dependencies]
python = "^3.8"
nbconvert = "^7.2.9"
python-dotenv = "^0.21.1"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.2"
Pillow = "^9.4.0"
Sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
nbsphinx = "^0.8.12"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme","nbsphinx"]



[tool.poetry.scripts]
rick-portal-gun = "jupyter2hashnode.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
typer = "0.7.0"
pandoc = "^2.3,<3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"